# symcxr_neurips

./: README.md
radgraph-viz/: index.html  readme.md  simple-graph.html
radgraph-viz/data/: dp_vis_test.json  dp_vis_train.json
src/: parse.py  parse_scl.py  parse_score.py  run.py  run_counter.py  test.py  utils.py  visualization_data.py
src/scallopy-plugin/ablate_entity/: pyproject.toml
src/scallopy-plugin/ablate_entity/src/scallop_ablate_entity/: __init__.py  ablate_entity.py  config.py
src/scl/: bijection.scl  example_1.scl  medical_match.scl  medical_match_v2.scl  medical_match_v3.scl  medical_match_v4.scl  test1.scl  test2.scl  test3.scl  test4.scl
sym-radgraph/: README.md  inference-v1.py
sym-radgraph/data/input/p10/p10002428/: s50027225.txt
sym-radgraph/dygiepp/: setup.py
sym-radgraph/dygiepp/dygie/data/dataset_readers/: document.py  dygie.py
sym-radgraph/dygiepp/dygie/models/: coref.py  dygie.py  events.py  ner.py  relation.py
sym-radgraph/dygiepp/dygie/predictors/: dygie.py
